# short-string

./: CMakeLists.txt
include/: small_string.hpp
test/: test_basic.cpp
